# system_guardian

./: .env  .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.git.bak/: COMMIT_EDITMSG  FETCH_HEAD  HEAD  ORIG_HEAD  config  index
.git.bak/hooks/: pre-commit
.git.bak/logs/: HEAD
.git.bak/refs/heads/: opt
config/: incident_rules.json
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
docs/: ai_resolution_system.md  ai_resolution_system_zh_tw.md
docs/test_resolution_knowledge/: index.md  knowledge_metadata.json
docs/test_resolution_knowledge/application_errors/: api-rate-limiting-errors.md  memory-leaks-in-application.md
docs/test_resolution_knowledge/cloud_service_disruptions/: aws-s3-access-issues.md
docs/test_resolution_knowledge/database_issues/: database-connection-pool-exhaustion.md  database-index-corruption.md  database-replication-lag.md
docs/test_resolution_knowledge/infrastructure_failures/: host-server-failure.md
docs/test_resolution_knowledge/kubernetes_problems/: kubernetes-node-not-ready.md  pod-stuck-in-crashloopbackoff.md
docs/test_resolution_knowledge/monitoring_alerts/: false-positive-monitoring-alerts.md
docs/test_resolution_knowledge/network_problems/: dns-resolution-failures.md  network-connectivity-issues-between-services.md
docs/test_resolution_knowledge/performance_issues/: high-cpu-usage-on-application-servers.md
docs/test_resolution_knowledge/security_incidents/: authentication-service-breach-attempt.md
system_guardian/: __init__.py  __main__.py  conftest.py  event_consumer_service.py  logging.py  logging_config.py  settings.py
system_guardian/db/: base.py  check_incidents.py  drop_incidents_table.py  fix_trigger_events.py  reset_events_table.py  reset_incidents_table.py  update_events_table.py  utils.py
system_guardian/db/models/: __init__.py  incidents.py
system_guardian/services/: __init__.py
system_guardian/services/ai/: __init__.py  engine.py  incident_analyzer.py  incident_detector.py  incident_similarity.py  report_generator.py  resolution_generator.py  service_base.py  service_factory.py  severity_classifier.py
system_guardian/services/config/: __init__.py  incident_rules.py
system_guardian/services/consumers/: __init__.py  event_consumer.py
system_guardian/services/ingest/: __init__.py  message_publisher.py
system_guardian/services/jira/: __init__.py  client.py
system_guardian/services/rabbit/: lifetime.py
system_guardian/services/slack/: client.py  (+3 more)
system_guardian/tests/: __init__.py  enhanced_generate_fake_events.py  generate_fake_events.py  generate_resolution_knowledge.py  generate_test_incidents.py  llm_generate_fake_events.py  send_msg_to_slack.py  start_event_consumer.py  test_ai_reports.py  test_incident_workflow.py  test_jira_issue_types.py  test_jira_no_priority.py  test_jira_ticket_creation.py  test_message_queue.py  upload_to_qdrant.sh  verify_events_db.py
system_guardian/web/: __init__.py  application.py  lifetime.py
(+46 files in other folders)
