[tool.poetry]
name = "system_guardian"
version = "0.1.0"
description = ""
authors = [
    "Jordan Chen <jordanchenml@gmail.com>"
]
maintainers = [

]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
fastapi = "0.100.1"
uvicorn = { version = "0.22.0", extras = ["standard"] }
pydantic = "2.10.4"
pydantic-settings = "2.6.1"
yarl = "1.17.1"
ujson = "5.10.0"
httptools = "0.6.4"
SQLAlchemy = {version = "^2.0.18", extras = ["asyncio"]}
asyncpg = {version = "^0.28.0", extras = ["sa"]}
aio-pika = "^9.1.4"
loguru = "^0.7.0"
langchain-community = "0.3.7"
langchain-openai = "0.2.9"
langgraph = "0.2.52"
langchain-core = "0.3.39"
langfuse = "2.57.0"
qdrant-client = "^1.8.0"
numpy = "^1.24.3"
tenacity = "^8.2.3"
aiohttp = "^3.11.14"
psutil = "^7.0.0"
python-multipart = "^0.0.20"
slack-sdk = "^3.28.1"
jira = "^3.5.1"
langchain-litellm = "^0.1.4"

[tool.poetry.dev-dependencies]
pytest = "7.4.4"
flake8 = "4.0.1"
flake8-docstrings = "1.7.0"
pydocstyle = "6.3.0"
mypy = "1.13.0"
isort = "5.13.2"
pre-commit = "3.8.0"
wemake-python-styleguide = "0.17.0"
black = "22.12.0"
autoflake = "1.7.8"
pytest-cov = "4.1.0"
anyio = "4.7.0"
pytest-env = "0.8.2"
httpx = "0.27.2"
types-requests = "2.32.0.20241016"
types-PyYAML = "6.0.2"
types-PyMySQL = "1.1.0"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["system_guardian",]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = [
    "SYSTEM_GUARDIAN_ENVIRONMENT=pytest",
    "SYSTEM_GUARDIAN_DB_BASE=system_guardian_test",
]

# [fastapi-template.options]
# project_name = "system_guardian"
# api_type = "rest"
# enable_redis = "None"
# enable_rmq = "True"
# ci_type = "none"
# enable_migrations = "None"
# enable_taskiq = "None"
# enable_kube = "None"
# kube_name = "system-guardian"
# enable_routers = "True"
# enable_loguru = "True"
# traefik_labels = "None"
# add_dummy = "None"
# orm = "sqlalchemy"
# self_hosted_swagger = "None"
# prometheus_enabled = "None"
# sentry_enabled = "None"
# otlp_enabled = "None"
# pydanticv1 = "None"
# gunicorn = "None"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# System Guardian optional dependencies management
[tool.poetry.extras]
all = ["aio-pika", "aiofiles", "asyncpg", "openai", "pytest", "rich", "uvicorn"]
api = ["fastapi", "pydantic", "uvicorn"]
async = ["asyncio", "aiofiles", "anyio"]
db = ["sqlalchemy", "asyncpg", "alembic"]
dev = ["pytest", "isort", "black", "mypy", "autoflake", "flake8"]
http = ["httpx", "aiohttp", "fastapi"]
mq = ["aio-pika"]
vector = ["qdrant-client", "numpy", "openai"]
